--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Yeu anh</title>
+    <title</title>
     <link href="https://fonts.bunny.net/css?family=instrument-sans:400,500,600" rel="stylesheet"/>
     <link rel="stylesheet" href="/static/css/app.css" />
   </head>
@@ -82,6 +82,7 @@
   </div>
   <script type="module" src="/static/js/app.js"></script>
   <script type="module" src="/static/js/home.js"></script>
+    <!--
     <div class='codepro-music-box'>
   <button class='codepro-music-box-toggle-btn'>
     <a title='Play music'><i class='fa fa-music'></i></a>
@@ -146,5 +147,6 @@
     });
   });
 </script>
+    -->
   </body>
 </html>
