--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "chúc anh sinh nhật vui vẻ",
-              "em yêu anh",
-              "Tuổi mới thành công"
+              "em yeu abe của e nhiều lắm aaa 💗"
             ],
             "music": "/"
           },
