--- a/index.html
+++ b/index.html
@@ -147,30 +147,70 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<div class="codepro-music-box">
-  <audio id="custom-audio" src="link-bai-hat.mp3"></audio>
-  <button class="codepro-music-box-toggle-btn">
-    <i class="fa fa-music"></i>
+<div class='codepro-music-box'>
+  <button class='codepro-music-box-toggle-btn'>
+    <a title='Play music'><i class='fa fa-music'></i></a>
   </button>
+  <audio id="custom-audio" src="https://dev.htpn.vn/upload/SnapTik.Net_7384595787453418753.mp3"></audio>
 </div>
+
+<style>
+  .codepro-music-box {
+    position: fixed;
+    width: 300px;
+    height: 160px;
+    z-index: 120;
+    bottom: 30px;
+    left: 30px;
+  }
+
+  .codepro-music-box a {
+    color: #fff;
+  }
+
+  .codepro-music-box button {
+    background: rgba(0, 0, 0, 0.1);
+    width: 40px;
+    height: 40px;
+    font-size: 1rem;
+    color: #fff;
+    border: 1px solid #e6e6e6;
+    outline: 0;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 50%;
+  }
+
+  @media (max-width: 991px) {
+    .codepro-music-box {
+      width: 250px;
+      height: 120px;
+    }
+
+    .codepro-music-box button {
+      left: 0;
+    }
+  }
+</style>
+
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+<script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script>
   $(document).ready(function () {
     const audio = document.getElementById("custom-audio");
-    const btn = $(".codepro-music-box-toggle-btn");
-
-    btn.on("click", function () {
+    $(".codepro-music-box-toggle-btn").on("click", function () {
       if (audio.paused) {
         audio.play();
-        btn.removeClass("muted");
       } else {
         audio.pause();
-        btn.addClass("muted");
       }
     });
   });
 </script>
-
     
   </body>
 </html>
